<resources>
    <string name="app_name">GitMaster</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="toast_network_error">Nerwork error.</string>
    <string name="toast_request_unexpected_error">Unexpected error</string>
    <string name="toast_login_failed">Login failed! Please try again!</string>
    <string name="toast_unfollow_success">Unfollow success</string>
    <string name="toast_fork_success">"Forked repo "</string>
    <string name="toast_fork_failed">Fork failed</string>
    <string name="toast_star_success">Starred</string>
    <string name="toast_star_failed">Star failed</string>
    <string name="toast_unstar_success">Unstar</string>
    <string name="toast_unstar_failed">Unstar failed</string>
    <string name="toast_get_recommend_failed">Failed to get Recommend repo</string>
    <string name="toast_gene_select">Please select language first.</string>
    <string name="toast_gene_not_select_language">You have not select language yet.</string>
    <string name="toast_gene_not_select_skill">You have not select skill yet.</string>
    <string name="toast_save_gene_success">Save gene success</string>
    <string name="toast_save_gene_failed">Save gene failed</string>
    <string name="toast_already_have_gene">Already have this gene.</string>
    <string name="toast_update_gene_success">Update gene success.</string>
    <string name="toast_update_gene_failed">Update gene failed.</string>
    <string name="toast_star_recommend_success">Star Success!</string>
    <string name="toast_star_recommend_failed">Star failed! Try again!</string>
    <string name="toast_fork_recommend_success">Fork Success!</string>
    <string name="toast_share_loading">Loading...</string>

    <string name="activity_main_item_timeline">Timeline</string>
    <string name="activity_main_item_recommend">Recommend</string>
    <string name="activity_main_item_mine">Mine</string>

    <string name="activity_search_hint">search</string>
    <string name="activity_search_sort_by">Sort by</string>
    <string name="activity_search_repo">Repo</string>
    <string name="activity_search_user">User</string>
    <string name="activity_search_empty">No Results</string>

    <string name="activity_userinfo_follow">Follow</string>
    <string name="activity_userinfo_unfollow">Unfollow</string>
    <string name="activity_gene_title">Gene</string>


    <string name="frag_repo_owner">Built by %1$s</string>
    <string name="dialog_sort_best_match">Best Match(Default)</string>
    <string name="dialog_sort_most_starts">Most Stars</string>
    <string name="dialog_sort_most_forks">Most Forks</string>
    <string name="dialog_sort_recent_updated">Recent Updated</string>
    <string name="dialog_sort_most_followers">Most Followers</string>
    <string name="dialog_sort_most_repositories">Most Repositories</string>
    <string name="dialog_sort_most_joined">Most Joined</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_sure">Sure</string>
    <string name="dialog_unfollow">Are you sure to unfollow %1$s</string>
    <string name="dialog_unfollow_title">Notice</string>
    <string name="dialog_delete_gene_message">Are you sure to delete this item?</string>


    <!-- mine fragment -->
    <string name="mine_label_followers">Followers</string>
    <string name="mine_label_following">Followings</string>
    <string name="mine_label_repos">Repos</string>
    <string name="mine_label_stars">Stars</string>
    <string name="mine_label_gene">Gene</string>
    <string name="mine_label_location">Location</string>
    <string name="mine_label_company">Company</string>
    <string name="mine_label_joinin">Join In</string>
    <string name="mine_label_organzation">Organization</string>
    <string name="mine_label_default_amount">0</string>
    <string name="mine_label_default_value">N/A</string>

    <!-- timeline fragment -->
    <string name="time_line_less_than_one_minute">less than one minute</string>
    <string name="time_line_minute_ago">a minute ago</string>
    <string name="time_line_minutes_ago">%1$d minutes ago</string>
    <string name="time_line_hour_ago">an hour ago</string>
    <string name="time_line_hours_ago">%1$d hours ago</string>
    <string name="time_line_day_ago">a day ago</string>
    <string name="time_line_days_ago">%1$d days ago</string>
    <string name="time_line_month_ago">a month ago</string>
    <string name="time_line_months_ago">%1$d months ago</string>
    <string name="time_line_year_ago">a year ago</string>
    <string name="time_line_years_ago">%1$d years ago</string>
    <string name="time_line_refresh_failed">Failed to get Timeline Event!</string>
    <string name="time_line_no_date">No Timeline Event!</string>

    <!-- login activity -->
    <string name="activity_permission_notice">GitMaster needs permission\nto access your account</string>
    <string name="activity_permission_sign_in">Sign in with Github</string>
    <string name="activity_login_title">Github Authorization</string>

    <string name="bottom_label_star">Star</string>
    <string name="bottom_label_unstar">Unstar</string>
    <string name="bottom_label_fork">Fork</string>

    <!-- recommend fragment -->
    <string name="recommend_notice1">That\'s all about it!</string>
    <string name="recommend_notice2_part1">Add new gene</string>
    <string name="recommend_notice2_part2"> to find more repo\n worth recommending.</string>
    <string name="recommend_notice3_part1">Or you can </string>
    <string name="recommend_notice3_part2">view this recommend list again.</string>
    <string name="recommend_bottom_label_star">Star</string>
    <string name="recommend_bottom_label_fork">Fork</string>
    <string name="recommend_bottom_label_skip">Skip</string>

    <string name="activity_add_gene_language">Language</string>
    <string name="activity_add_gene_skill">Skill</string>
    <string name="activity_add_new_gene">Add new gene</string>
    <string name="activity_add_edit_gene">Edit gene</string>
    <string name="toast_gene_delete_failed">Delete gene failed.</string>
    <string name="toast_gene_delete_success">Delete gene success</string>
    <string name="toast_gene_fetch_fail">Get gene data failed.</string>

    <string name="exit">Press back again to exit</string>

</resources>
