<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.maxleapmobile.gitmaster.ui.widget.ProgressWebView
        android:id="@+id/recommend_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp" />

    <LinearLayout
        android:id="@+id/recommend_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recommend_notice1"
            android:textColor="#808080"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recommend_notice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="#808080"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recommend_notice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="#808080"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/recommend_action_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recommend_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/recommend_bottom_label_star"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/recommend_star_progressbar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0076FF"
                android:visibility="gone" />

        </FrameLayout>

        <View
            android:layout_width="1px"
            android:layout_height="12dp"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/recommend_fork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/recommend_bottom_label_fork"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <View
            android:layout_width="1px"
            android:layout_height="12dp"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/recommend_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/recommend_bottom_label_skip"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>


    <include
        android:id="@+id/repo_progressbar"
        layout="@layout/view_progressbar" />

</RelativeLayout>